2004-05-13  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* nntp.el: Support marks.
	(nntp-marks-is-evil, nntp-marks-file-name, nntp-marks)
	(nntp-marks-modtime, nntp-marks-directory): New variables.
	(nntp-request-set-mark, nntp-request-update-info)
	(nntp-possibly-create-directory, nntp-marks-changed-p)
	(nntp-save-marks, nntp-open-marks): New functions.

2004-05-12  Jesper Harder  <harder@ifa.au.dk>

	* gnus-xmas.el (gnus-xmas-select-lowest-window)
	(gnus-xmas-redefine): Rename.

	* gnus-score.el (gnus-score-insert-help): Use
	gnus-select-lowest-window.

	* gnus-ems.el (gnus-select-lowest-window): Copy definition of
	appt-select-lowest-window and rename to gnus-select-lowest-window.

	* gnus.el: do.

2004-05-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* rfc2047.el (rfc2047-encode): Use uppercase letters to specify
	encodings of MIME-encoded words, in order to improve
	interoperability with several broken MUAs.

2004-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mm-view.el (mm-inline-text-html-render-with-w3): Check META
	tags, only when charsets are not specified in headers.
	(mm-inline-text-html-render-with-w3m): Ditto.

	* lpath.el: Remove `w3m-meta-content-type-charset-regexp' and
	`w3m-charset-to-coding-system'.  Add `w3m-detect-meta-charset'.

2004-05-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* gnus-art.el (article-strip-banner): Use MIME-encoded from fields
	instead of MIME-decoded from fields when checking
	`gnus-article-address-banner-alist'.

2004-05-03  Jesper Harder  <harder@ifa.au.dk>

	* nnrss.el (nnrss-check-group, nnrss-read-group-data): Hash on
	description rather than subject.

2004-05-02  Steve Youngs  <steve@youngs.au.com>

	* dgnushack.el: Autoload `mail-fetch-field' for XEmacs.

2004-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-version-number): Bump.

2004-05-01 Lars Magne Ingebrigtsen <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.2 is released.

2004-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>
